css/style.css
html{
	height: 100%;
	background: #f5f5f5;
}

body {
	height: 100%;
	display: flex;
	display: -webkit-flex;
	flex-direction: column;
	-webkit-flex-direction: column;
	font-family: "Open Sans", sans-serif;
	text-align: justify;
    text-justify: inter-word;
	align-items: center;
	-webkit-align-items: center;
	margin: 0;
}

body a {
	color: black;
	text-decoration: underline;
}

body a:hover {
  	color: rgba(85,85,85,1);
}

.wrapper{
	-webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  	-moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
	max-width: 960px;
	width: 90%;
}

header {
	display: flex;
	display: -webkit-flex;
	flex-direction: row;
	-webkit-flex-direction: row;
	justify-content: flex-end;
	-webkit-justify-content: flex-end;
	align-items: center;
	-webkit-align-items: center;
	background: #42A8C0;
	width: 100%;
	color: white;
}

.name-container {
	flex: 1 1 auto;
	-webkit-flex:  1 1 auto;
	text-align: center;
}

.name-container h1 {
	font-weight: 100;
	letter-spacing: 2px;
	font-size: 40px;
	font-family: "Roboto", sans-serif;
}

.name-container h4 {
	font-weight: 500;
	letter-spacing: 1px;
	font-size: 20px;
	font-family: "Roboto", sans-serif;
}

.profile-container {
	flex: 0 0 auto;
	-webkit-flex:  0 0 auto;
	background: rgba(0,0,0,0.2);
	display: flex;
	display: -webkit-flex;
	padding: 10px;
}

.social-container {
	display: flex;
	display: -webkit-flex;
	flex-direction: column;
	-webkit-flex-direction: column;
	justify-content: center;
	font-size: 17px;
	margin-top: 10px;
	margin-right: 10px;
	font-family: "Roboto", sans-serif;
}

.social-container a {
	color: white;
	text-decoration: none;
}

.social-container a:hover {
  text-decoration: underline;
}

.contact-list {
	list-style-type: none;
}

.contacttext {
	display: inline;
}

.contact-list .fa {
  margin-right: 10px;
  font-size: 20px;
  vertical-align: middle;
}

.contact-list li {
  margin-bottom: 5px;
}

.picture-container{
	position: relative;
	width: 200px;
	height: 200px;
	overflow: hidden;
	border-radius: 50%;
}

.portrait-pic {
	width: 100%;
	height: auto;
}

main {
	background: white;
	flex: 1 0 auto;
	-webkit-flex:  1 0 auto;
	width: 100%;
	color: black;
}

section {
	padding-left: 20px;
	padding-right: 20px
}

.summ-box {
	padding: 20px;
}

.experience-box {
	margin: 20px auto;
}

.section-title {
  text-transform: uppercase;
  font-size: 20px;
  font-weight: 2;
  color: #2d7788;
  margin-top: 20px;
  margin-bottom: 20px;
  font-family: "Roboto", sans-serif;
}

.item {
  margin-bottom: 30px;
}

.upper-row {
  position: relative;
  overflow: hidden;
  margin-bottom: 2px;
}
.rwd-line {
	display: block;
}

.job-title {
  	font-size: 20px;
  	margin-top: 0;
  	margin-bottom: 0;
  	font-weight: bold;
  	font-family: "Roboto", sans-serif;
}

.time {
  	position: absolute;
  	right: 0;
  	top: 0;
  	color: #7a8aa0;
  	font-family: "Roboto", sans-serif;
}

.timeMobile {
	display: none;
  	color: #7a8aa0;
  	font-family: "Roboto", sans-serif;
}

.company {
  margin-bottom: 10px;
  color: #7a8aa0;
  font-family: "Roboto", sans-serif;
}

.education-box {
	margin: 20px auto;
}

.portfolio-container{
	display:flex;
	display: -webkit-flex;
	flex-direction: column;
	-webkit-flex-direction: column;
}

.portfolio-title {
	text-transform: uppercase;
   	font-size: 20px;
  	font-weight: 2;
  	color: #2d7788;
  	margin-top: 10px;
  	margin-bottom: 10px;
	font-family: "Roboto", sans-serif;
}

#menu-picker {
	display: flex;
	display: -webkit-flex;
	text-align: center;
}

.menu-text {
	-webkit-flex: 1 0 auto;
	flex: 1 0 auto;
	font-size: 22px;
  	font-weight: bold;
  	color: #2d7788;
  	margin-top: 20px;
  	margin-bottom: 20px;
	text-decoration: none;
	font-family: "Roboto", sans-serif;
}

a:hover.menu-text {
	color: #1a454f;
}

a.currentlyActive {
	text-decoration: underline;
}

p.reference {
	padding-left: 2em;
	text-indent: -2em;
}

.showcase-container {
	margin-top: 20px;
	margin-bottom: 20px;
}

.skills-container {
	display: flex;
	display: -webkit-flex;
	flex-direction: column;
	-webkit-flex-direction: column;
	font-size: 18px;
	margin-top: 10px;
	flex-grow: 1;
	margin-bottom: 10px;
}

.reference a {
	color: black;
	text-decoration: underline;
}

.reference a:hover {
  	color: rgba(85,85,85,1);
}

.grant-title {
  	font-size: 20px;
  	margin-top: 0;
  	margin-bottom: 0;
  	font-weight: bold;
  	font-family: "Roboto", sans-serif;
}

.grant-company {
	margin-bottom: 10px;
	color: #7a8aa0;
	font-family: "Roboto", sans-serif;
}

.skills {
	list-style-type: none;
	display: flex;
	flex-wrap: wrap;
	text-align: left;
}

.skill {
	display: flex;
	display: -webkit-flex;
	flex-grow: 1;
	width: 50%;
}

.text, .stars, .mastery{
	flex: 1 1 0
}

.skills .fa {
	margin-right: 7.5px;
	margin-left: 7.5px;
	font-size: 20px;
	vertical-align: middle;
}

.skills li {
	margin-bottom: 5px;
}

.line-break{
	width: 80%;
	border-top: 1px solid black;
	margin: 0 auto;
}

.misc-container {
	display: -webkit-flex;
	flex-direction: column;
	-webkit-flex-direction: column;
}

.misc-container .skills{
	list-style-type: none;
}

.skills-wrapper {
	display: flex;
	display: -webkit-flex;
	flex-direction: row;
	-webkit-flex-direction: row;
}

p {
	font-weight: 200;
	letter-spacing: 1px;
}

/* Everything too small for skills: Change to one column ----------- */
@media only screen and (max-device-width : 1000px) {

	.skills {
		flex-direction: column;
		-webkit-flex-direction: column;
	}

	.skill {
		width: 100%;
	}

}

/* Everything too small for header ----------- */
@media only screen and (max-device-width : 885px) {
	header {
	flex-direction: column;
	-webkit-flex-direction: column;
	}


}

/* Everything too small for one column skills: Remove mastery ----------- */
@media only screen and (max-device-width : 710px) {
	.mastery {
		display: none;
	}
}

/* Everything too small for time to position correctly and for contacttext ----------- */
@media only screen and (max-device-width : 635px) {
	header {
	flex-direction: column;
	-webkit-flex-direction: column;
	}

	.contacttext {
		display:none;
	}

	.company {
  		margin-bottom: 0px;
 	}

 	.timeMobile {
		display: inline;
	}

	.time {
		display: none;
	}
}

/* Everything too small for menu-picker and stars ----------- */
@media only screen and (max-device-width : 480px) {
	.stars i {
		font-size: 75%px;
	}

	#menu-picker {
		flex-direction: column;
	    -webkit-flex-direction: column;
	}
}

